@@ -41,6 +41,7 @@
 
 #include <string.h>
 #include <errno.h>
+#include <stdlib.h>
 
 #include <nuttx/nx/nxglib.h>
 
@@ -192,9 +193,11 @@ int nxgl_splitline(FAR struct nxgl_vector_s *vector,
 
   /* The final degenerate case */
 
-  if (linewidth == 1)
+  if (linewidth == 1 &&
+      abs(line.pt2.x - line.pt1.x) < (line.pt2.y - line.pt1.y))
     {
-      /* A line of width 1 is basically a single parallelogram of width 1 */
+      /* A close to vertical line of width 1 is basically
+       * a single parallelogram of width 1 */
 
       traps[1].top.x1 = itob16(line.pt1.x);
       traps[1].top.x2 = traps[1].top.x1;
